--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/flork.css">
+    <link rel="stylesheet" href="css/flork.css">
     <title>Animación Flork</title>
 </head>
 <body>
     <div class="container">
         <div class="image-container">
-            <img id="img2" src="/assets/flork c.jpg" alt="ME" class="active">
-            <img id="img1" src="/assets/flork.jpg" alt="YOU">     
+            <img id="img2" src="assets/flork c.jpg" alt="ME" class="active">
+            <img id="img1" src="assets/flork.jpg" alt="YOU">     
         </div>
         <p class="text" id="text">Me</p>
     </div>
