--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <audio id="bg-music" autoplay loop>
-        <source src="/assets/Lukas Graham - Love Someone (Lyrics).mp3" type="audio/mpeg">
+        <source src="assets/Lukas Graham - Love Someone (Lyrics).mp3" type="audio/mpeg">
     </audio>
     <button class="audio-control" onclick="toggleMusic()">Reproducir Música</button>
 
